# code_injection

./: .gitignore  CMakeLists.txt  hello_world
include/: ci_elf.h  ci_generic.h
libft/: CMakeLists.txt
libft/include/: libft.h
src/asm/: handler_elf64.s  parasite_elf64.s
src/c/: elf64.c  main.c  utils.c
